--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>The Basic Language of The Web:HTML</title>
 	</head>
-	<body></body>
+	<body>
+		<h1>The Basic Language of The Web:HTML</h1>
+	</body>
 </html>
